[package]
name = "zqutils"
version = "0.2.0"
edition = "2021"
license="MIT"
description="A collection of utilities for writing programs at Zilliqa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="zqutils"
path="src/lib.rs"
test=false

[[bin]]
name="zqutil"
path="src/bin/zutil.rs"
test=false


[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.30", features = ["derive"] }
colored = "3.0.0"
ethers = { version = "2.0.14", features = ["legacy"] }
gcp-bigquery-client = "0.25.1"
home = "0.5.11"
libc = "0.2.169"
log = "0.4.25"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.11.1"
reqwest = "0.12.12"
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sysctl = "0.6.0"
sysinfo = "0.30.13"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
